# luv-nft-poll

./: .eslintrc.json  .gitmodules  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/collectable/: page.tsx
app/(app)/collectables/: page.tsx
app/(app)/polls/: page.tsx
app/(app)/polls/[fund]/: page.tsx
app/(app)/polls/[poll]/: page.tsx
app/(app)/trust/: page.tsx
app/(app)/trust/[fund]/: page.tsx
app/(app)/withdrawal/: page.tsx
app/(landing)/: layout.tsx  page.tsx
app/admin/resolve/: page.tsx
app/polls/[poll]/: page.tsx
app/trust/[fund]/: page.tsx
contract/: Cargo.toml  NOTICE  remappings.txt
contract-evm/: compiler_config.json  foundry.toml
contract-evm/script/: DeployContracts.s.sol
contract-evm/src/: PollToken.sol  USDeStaking.sol
contract/artifacts/: checksums.txt  xion_capypolls_core.wasm
contract/core/: Cargo.toml
contract/core/.cargo/: config
contract/core/schema/: xion-capypolls-core.json
contract/core/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_config.json  response_to_get_poll_at.json  response_to_get_poll_count.json  response_to_get_poll_details.json
contract/core/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contract/poll/: Cargo.toml
contract/poll/examples/: schema.rs
contract/poll/schema/: xion-capypolls-poll.json
contract/poll/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_epoch_info.json  response_to_get_poll_info.json  response_to_get_total_staked.json  response_to_get_user_stakes_for_epoch.json
contract/poll/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contract/script/: CreatePoll.s.sol  constants.ts  contract-interactions.ts  deploy.txt  package-lock.json  package.json  repl.ts  tsconfig.json  tsconfig.script.json  viem-utils.ts
contract/script/solidity/: test.sol
contract/src/: CapyCore.sol  CapyNFT.sol  CapyPoll.sol  CapyTrustStrategy.sol  CapyTrustStrategyFactory.sol  CapyUSDeStakeRouter.sol  CapyVault.sol  StreamConfig.sol  TestToken.sol  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contract/src/interface/: IAddressDriver.sol  ICaller.sol  ICapyNFT.sol  IDrips.sol  INFTDriver.sol
contract/token/: Cargo.toml
contract/token/src/: contract.rs  error.rs  msg.rs  state.rs
