[package]
name = "xion-capypolls-core"
version = "0.1.0"
edition = "2021"
description = "Core factory contract for Xion CapyFlows prediction markets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
cw20-base = { version = "1.1.1", features = ["library"] }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.49"
xion-capypolls-poll = { path = "../poll" }
xion-capypolls-token = { path = "../token" }

[dev-dependencies]
cw-multi-test = "0.17.0" 