[package]
name = "xion-capypolls-core"
version = "0.1.0"
edition = "2021"
description = "Core factory contract for Xion CapyFlows prediction markets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0" }
cosmwasm-schema = "1.5.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.49"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
cw20-base = "1.1.1"
xion-capypolls-poll = { path = "../poll" }
xion-capypolls-token = { path = "../token" }

[dev-dependencies]
cw-multi-test = "0.17.0"