[package]
name = "xion-capypolls-poll"
version = "0.1.0"
edition = "2021"
description = "Poll contract for Xion CapyFlows prediction markets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0" }
cosmwasm-schema = "1.5.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.49"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
cw20-base = "1.1.1"

[dev-dependencies]
cw-multi-test = "0.17.0"