[package]
name = "xion-capypolls-token"
version = "0.1.0"
edition = "2021"
description = "Token contract for Xion CapyPolls prediction markets"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
#cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
#cosmwasm-storage = "1.5.0"
#cw-storage-plus = "1.1.0"
cw20-base = { version = "1.1.2", features = ["library"] }
cw-ownable = "0.5.1"
schemars = "0.8.15"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
cw-multi-test = "0.17.0" 